kubernetes/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8
          ports:
            - containerPort: 3306
              name: mysql
          resources:
            requests:
              memory: "500Mi"
              cpu: "300m"
            limits:
              memory: "500Mi"
              cpu: "300m"
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      restartPolicy: Always
      volumes:
        - name: mysql-persistent-storage
          emptyDir: {}
