kubernetes/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: todos-redis
          image: redis:6.2-alpine
          ports:
            - containerPort: 6379
          resources:
            requests:
              memory: "500Mi"
              cpu: "300m"
            limits:
              memory: "500Mi"
              cpu: "300m"
      hostname: redis
      restartPolicy: Always
