kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
  selector:
    app: backend
