kubernetes/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos-backend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - image: <Image>
          name: todos-backend
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - name: http 
              containerPort: 8080
      restartPolicy: Always
