kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: ClusterIP
  ports:
    - protocol: "TCP"
      port: 3000
      targetPort: 3000
  selector:
    app: frontend
