kubernetes/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos-frontend
spec:
  type: ClusterIP
  ports:
    - protocol: "TCP"
      port: 3000
      targetPort: 3000
  selector:
    app: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: todos-frontend
          image: <Image>
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
      restartPolicy: Always
