kubernetes/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos-mysql
spec:
  clusterIP: None
  ports:
    - name: mysql
      targetPort: mysql
      port: 3306
  selector:
    app: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-mysql
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      restartPolicy: Always
      containers:
        - name: todos-mysql
          image: mysql:8
          ports:
            - name: mysql
              containerPort: 3306
          resources:
            requests:
              memory: "500Mi"
              cpu: "300m"
            limits:
              memory: "500Mi"
              cpu: "300m"
          livenessProbe:
            tcpSocket:
              port: mysql
            initialDelaySeconds: 5
            periodSeconds: 15
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: todos-mysql-claim
      affinity:
        podAntiAffinity:
          requiredDuringScheduling:
            ignoredDuringExecution:
              - labelSelector:
                  matchLabels:
                    app: mysql
                topologyKey: "kubernetes.io/hostname"
