kubernetes/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  type: ClusterIP
  ports:
    - name: "redis"
      port: 6397
  selector:
    app: redis
