kubernetes/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos-redis
spec:
  type: ClusterIP
  ports:
    - name: redis
      port: 6397
      targetPort: 6397
  selector:
    app: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: todos-redis
          image: redis:6.2-alpine
          ports:
            - containerPort: 6379
          resources:
            requests:
              memory: 256Mi
              cpu: 125m
            limits:
              memory: 200Mi
              cpu: 70m
      hostname: redis
      restartPolicy: Always
