kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: todos-ingress
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: todos-frontend
              portName: http
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: todos-backend
              portName: http
